# LineSensorArrowDetection

./: .name  BaselineData.cpp  BaselineData.h  CMakeLists.txt  FindPylon.cmake  LICENSE  README.md  SDLfunctions.cpp  SDLfunctions.h  SQLitefunctions.cpp  SQLitefunctions.h  ScreenPositionEstimator.cpp  ScreenPositionEstimator.h  cameraEvent.cpp  cameraEvent.h  cameraSetup.cpp  cameraSetup.h  camerasettings.h  errorCheckingMacros.h  filenames.h  globals.h  main_baseline.cpp  main_testing_continous.cpp  main_training.cpp  main_training.h  regression_fitting.py  setupCleanupFunctions.cpp  setupCleanupFunctions.h
